Previous mistakes fixed

--- a/action-view.html
+++ b/action-view.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-  <header class="sticky-top">
+  <header class="sticky-top es-border-b-header">
     <nav class="navbar navbar-expand-lg es-gray-navbar sm-hide" id="blackNavbar">
       <div class="container">
         <ul class="navbar-nav">
@@ -299,14 +299,14 @@
     <section class="es-category-section">
       <div class="container">
         <nav aria-label="breadcrumb">
-          <ol class="breadcrumb es-breadcrumb">
+          <ol class="breadcrumb es-breadcrumb es-breadcrumb-ac-view-mb">
             <li class="breadcrumb-item"><a href="index.html">Bosh sahifa</a></li>
             <li class="breadcrumb-item"><a href="actions.html">Aksiyalar</a></li>
             <li aria-current="page" class="breadcrumb-item active">Fiqhga nazar</li>
           </ol>
         </nav>
         <div class="es-actions-list">
-          <div class="es-action-item">
+          <div class="es-action-item es-action-view-banner-h">
             <div class="es-action-detail">
               <h1 class="es-action-title">
                 Fiqhga nazar aksiyasi
@@ -324,11 +324,11 @@
                   <p>Bu yerda aksiya uchun mo‘ljallangan ya’ni uni tafsirlab beruvchi tekst kerak bo‘ladi. Chunki
                     aksiyadan
                     murodni bildirib ketgan yaxshi. Qisqagina kopirayt bo‘ladi aksiyaning murodi va u haqida.</p>
-
+                    <br>
                   <p>Shu sababdan 1-sentabrdan to 30-sentabrgacha barcha Qamar do‘konlarida va onlayn do‘konda ushbu
                     aksiya
                     davom etadi.</p>
-
+                    <br>
                   <p>Aksiyadagi kitoblarni 25% chegirmagacha xarid qilishingiz mumkin. Hurmat bilan Qamar jamoasi.</p>
                 </div>
               </div>
@@ -343,7 +343,7 @@
 
           <section class="es-products-section">
             <div class="container">
-              <h3 class="es-subtitle">Aksiyadagi kitoblar</h3>
+              <h3 class="es-subtitle es-action-view-subtitle">Aksiyadagi kitoblar</h3>
 
               <div class="row es-products-list product-slick list-slick">
                 <div class="col-md-2">
