--- a/actions.html
+++ b/actions.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-  <header class="sticky-top">
+  <header class="sticky-top es-border-b-header">
     <nav class="navbar navbar-expand-lg es-gray-navbar sm-hide" id="blackNavbar">
       <div class="container">
         <ul class="navbar-nav">
@@ -315,7 +315,7 @@
               <div class="es-action-info">
                 Fiqh kitoblarining barchasi -25% chegirmada
               </div>
-              <a class="btn btn-more" href="category.html">KITOBLARNI KO‘RISH</a>
+              <a class="btn btn-more" href="category.html">KITOBLARNI KO‘RISH &nbsp;<img src="img/arrow-right.svg" alt=""></a>
             </div>
             <div class="es-action-period">
               30 sentabrgacha
@@ -329,7 +329,7 @@
               <div class="es-action-info">
                 Fiqh kitoblarining barchasi -25% chegirmada
               </div>
-              <a class="btn btn-more" href="category.html">KITOBLARNI KO‘RISH</a>
+              <a class="btn btn-more" href="category.html">KITOBLARNI KO‘RISH &nbsp;<img src="img/arrow-right.svg" alt=""></a>
             </div>
             <div class="es-action-period">
               30 sentabrgacha
@@ -343,7 +343,7 @@
               <div class="es-action-info">
                 Fiqh kitoblarining barchasi -25% chegirmada
               </div>
-              <a class="btn btn-more" href="category.html">KITOBLARNI KO‘RISH</a>
+              <a class="btn btn-more" href="category.html">KITOBLARNI KO‘RISH &nbsp;<img src="img/arrow-right.svg" alt=""></a>
             </div>
             <div class="es-action-period">
               30 sentabrgacha
@@ -357,7 +357,7 @@
               <div class="es-action-info">
                 Fiqh kitoblarining barchasi -25% chegirmada
               </div>
-              <a class="btn btn-more" href="category.html">KITOBLARNI KO‘RISH</a>
+              <a class="btn btn-more" href="category.html">KITOBLARNI KO‘RISH &nbsp;<img src="img/arrow-right.svg" alt=""></a>
             </div>
             <div class="es-action-period">
               30 sentabrgacha
