--- a/collection.html
+++ b/collection.html
@@ -375,6 +375,7 @@
                             <div id="range-slider-price"></div>
                             <div class="es-range-values">
                                 <input class="form-control es-range-min price-range" name="min" type="text" />
+                                <span class="es-minus-line">-</span>
                                 <input class="form-control es-range-max price-range" name="max" type="text" />
                             </div>
                         </div>
@@ -434,11 +435,12 @@
                             <div id="range-slider-page"></div>
                             <div class="es-range-values">
                                 <input class="form-control es-range-min page-range" name="minPage" type="text" />
+                                <span class="es-minus-line">-</span>
                                 <input class="form-control es-range-max page-range" name="maxPage" type="text" />
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-9">
+                    <div class="col-md-9 category-products-list">
                         <ul class="es-product-filter align-baseline">
                             <li class="active">
                                 <button class="btn">Yangilari bo‘yicha</button>
@@ -804,7 +806,9 @@
                             </div>
                         </div>
                         <div class="es-products-pages">
-                            <img src="img/arrow-left-disabled.svg" alt="">
+                            <button class="btn">
+                                <img src="img/arrow-left-disabled.svg" alt="">
+                            </button>
                             <ul class="es-page-numbers">
                                 <li class="active">
                                     <button class="btn">1</button>
@@ -822,7 +826,9 @@
                                     <button class="btn">5</button>
                                 </li>
                             </ul>
-                            <img src="img/ic_slick_right.svg" alt="">
+                            <button class="btn">
+                                <img src="img/ic_slick_right.svg" alt="">
+                            </button>
                         </div>
                     </div>
                 </div>
