--- a/contacts.html
+++ b/contacts.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-  <header class="sticky-top">
+  <header class="sticky-top es-border-b-header">
     <nav class="navbar navbar-expand-lg es-gray-navbar sm-hide" id="blackNavbar">
       <div class="container">
         <ul class="navbar-nav">
@@ -314,46 +314,46 @@
               <h4 class="es-subtitle">Операторы</h4>
               <div class="es-contact-info">Biror savolingiz bo‘lsa quyidagi raqamlarga telefon qiling:</div>
               <div class="es-contact-detail">
-                <p><a href="#">+998 (99) 845-44-00</a></p>
+                <p class="es-contact-number"><a href="#">+998 (99) 845-44-00</a></p>
                 <p><a href="#">+998 (90) 500-10-20</a></p>
               </div>
-              <a class="btn btn-more" href="#">TELEGRAMDAN YOZISH</a>
+              <a class="btn btn-more" href="#">TELEGRAMDAN YOZISH &nbsp;<img src="img/arrow-right.svg" alt=""></a>
             </div>
             <div class="es-contact-item">
               <h4 class="es-subtitle">Операторы</h4>
               <div class="es-contact-info">Biror savolingiz bo‘lsa quyidagi raqamlarga telefon qiling:</div>
               <div class="es-contact-detail">
-                <p><a href="#">+998 (99) 845-44-00</a></p>
+                <p class="es-contact-number"><a href="#">+998 (99) 845-44-00</a></p>
                 <p><a href="#">+998 (90) 500-10-20</a></p>
               </div>
-              <a class="btn btn-more" href="#">TELEGRAMDAN YOZISH</a>
+              <a class="btn btn-more" href="#">TELEGRAMDAN YOZISH &nbsp;<img src="img/arrow-right.svg" alt=""></a>
             </div>
             <div class="es-contact-item">
               <h4 class="es-subtitle">Операторы</h4>
               <div class="es-contact-info">Biror savolingiz bo‘lsa quyidagi raqamlarga telefon qiling:</div>
               <div class="es-contact-detail">
-                <p><a href="#">+998 (99) 845-44-00</a></p>
+                <p class="es-contact-number"><a href="#">+998 (99) 845-44-00</a></p>
                 <p><a href="#">+998 (90) 500-10-20</a></p>
               </div>
-              <a class="btn btn-more" href="#">TELEGRAMDAN YOZISH</a>
+              <a class="btn btn-more" href="#">TELEGRAMDAN YOZISH &nbsp;<img src="img/arrow-right.svg" alt=""></a>
             </div>
             <div class="es-contact-item">
               <h4 class="es-subtitle">Операторы</h4>
               <div class="es-contact-info">Biror savolingiz bo‘lsa quyidagi raqamlarga telefon qiling:</div>
               <div class="es-contact-detail">
-                <p><a href="#">+998 (99) 845-44-00</a></p>
+                <p class="es-contact-number"><a href="#">+998 (99) 845-44-00</a></p>
                 <p><a href="#">+998 (90) 500-10-20</a></p>
               </div>
-              <a class="btn btn-more" href="#">TELEGRAMDAN YOZISH</a>
+              <a class="btn btn-more" href="#">TELEGRAMDAN YOZISH &nbsp;<img src="img/arrow-right.svg" alt=""></a>
             </div>
             <div class="es-contact-item">
               <h4 class="es-subtitle">Операторы</h4>
               <div class="es-contact-info">Biror savolingiz bo‘lsa quyidagi raqamlarga telefon qiling:</div>
               <div class="es-contact-detail">
-                <p><a href="#">+998 (99) 845-44-00</a></p>
+                <p class="es-contact-number"><a href="#">+998 (99) 845-44-00</a></p>
                 <p><a href="#">+998 (90) 500-10-20</a></p>
               </div>
-              <a class="btn btn-more" href="#">TELEGRAMDAN YOZISH</a>
+              <a class="btn btn-more" href="#">TELEGRAMDAN YOZISH &nbsp;<img src="img/arrow-right.svg" alt=""></a>
             </div>
           </div>
         </div>
