--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
 
     <section class="es-products-section">
       <div class="container">
-        <h3 class="section-title">Новые поступление</h3>
+        <h3 class="section-title es-header-to-right">Новые поступление</h3>
 
         <div class="row es-products-list">
           <div class="col-md-2">
@@ -605,7 +605,7 @@
 
     <section class="es-products-section">
       <div class="container">
-        <h3 class="section-title">Самые продоваемые</h3>
+        <h3 class="section-title es-header-to-right">Самые продоваемые</h3>
 
         <div class="row es-products-list">
           <div class="col-md-2">
@@ -788,7 +788,7 @@
 
     <section class="es-collections-section">
       <div class="container">
-        <h3 class="section-title">Коллекции</h3>
+        <h3 class="section-title es-header-to-right">Коллекции</h3>
 
         <div class="row es-collection-list collection-slick list-slick">
           <div class="col-md-4">
@@ -857,7 +857,7 @@
 
     <section class="es-products-section">
       <div class="container">
-        <h3 class="section-title">Скидки</h3>
+        <h3 class="section-title es-header-to-right">Скидки</h3>
 
         <div class="row es-products-list">
           <div class="col-md-2">
@@ -1064,7 +1064,7 @@
 
     <section class="es-products-section">
       <div class="container">
-        <h3 class="section-title">Рекомендуемые</h3>
+        <h3 class="section-title es-header-to-right">Рекомендуемые</h3>
 
         <div class="row es-products-list product-slick list-slick">
           <div class="col-md-2">
@@ -1363,7 +1363,7 @@
 
     <section class="es-useful-section">
       <div class="container">
-        <h3 class="section-title">Полезные информации</h3>
+        <h3 class="section-title es-header-to-right">Полезные информации</h3>
 
         <div class="row es-useful-list useful-slick list-slick">
           <div class="col-md-3">
