--- a/product-view.html
+++ b/product-view.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-    <header class="sticky-top">
+    <header class="sticky-top es-border-b-header">
         <nav class="navbar navbar-expand-lg es-gray-navbar sm-hide" id="blackNavbar">
             <div class="container">
                 <ul class="navbar-nav">
@@ -296,7 +296,7 @@
     </header>
 
     <main>
-        <section class="es-product-section">
+        <section>
             <div class="container">
                 <div class="es-back-block">
                     <a class="es-block-link" href="index.html">Ortga qaytish</a>
@@ -305,6 +305,20 @@
                     <div class="col-md-6">
                         <div class="es-product-slider">
                             <img class="img-fluid" src="img/medicine.png" />
+                        </div>
+                        <div class="es-product-img-slider-pages">
+                            <p>
+                                <span>01</span>
+                                <span class="es-next-product-imgs">/07</span>
+                            </p>
+                            <div class="es-product-img-slider-b">
+                                <button class="btn">
+                                    <img src="img/arrow-left-disabled.svg" alt="">
+                                </button>
+                                <button class="btn">
+                                    <img src="img/ic_slick_right.svg" alt="">
+                                </button>
+                            </div>
                         </div>
                     </div>
                     <div class="col-md-6">
@@ -447,7 +461,7 @@
                     </div>
                 </div>
 
-                <div class="es-pv-description">
+                <div class="es-pv-description es-mt-72px">
                     <h2 class="es-pv-subtitle">Qo‘shimcha ma’lumotlar</h2>
                     <table class="table es-pv-table">
                         <tr>
@@ -469,9 +483,9 @@
                     </table>
                 </div>
 
-                <section class="es-products-section">
+                <section class="es-products-section es-mt-118">
                     <div class="container">
-                        <h3 class="section-title">Рекомендуемые</h3>
+                        <h3 class="section-title es-header-to-right">Рекомендуемые</h3>
 
                         <div class="row es-products-list">
                             <div class="col-md-2">
@@ -654,7 +668,7 @@
 
                 <section class="es-collections-section">
                     <div class="container">
-                        <h3 class="section-title">Коллекции</h3>
+                        <h3 class="section-title es-header-to-right">Коллекции</h3>
 
                         <div class="row es-collection-list collection-slick list-slick">
                             <div class="col-md-4">
@@ -746,7 +760,6 @@
             </div>
         </section>
         <div class="es-locations">
-            <img alt="" class="img-fluid w-100" src="img/maps.jpg" />
             <div class="container es-location-container">
                 <div class="es-location-content">
                     <div class="es-location-title">
@@ -757,7 +770,7 @@
                         Shayxontohur tumani, 42A Navoiy shoh ko'chasi.<br>Chorsudagi sobiq GUM ro‘parasida.
                     </div>
 
-                    <a class="btn btn-more" href="#">MARSHRUT CHIZISH</a>
+                    <a class="btn btn-location" href="#">MARSHRUT CHIZISH</a>
                 </div>
             </div>
         </div>
