--- a/category.html
+++ b/category.html
@@ -368,6 +368,7 @@
               <div id="range-slider-price"></div>
               <div class="es-range-values">
                 <input class="form-control es-range-min price-range" name="min" type="text" />
+                <span class="es-minus-line">-</span>
                 <input class="form-control es-range-max price-range" name="max" type="text" />
               </div>
             </div>
@@ -427,11 +428,12 @@
               <div id="range-slider-page"></div>
               <div class="es-range-values">
                 <input class="form-control es-range-min page-range" name="minPage" type="text" />
+                <span class="es-minus-line">-</span>
                 <input class="form-control es-range-max page-range" name="maxPage" type="text" />
               </div>
             </div>
           </div>
-          <div class="col-md-9">
+          <div class="col-md-9 category-products-list">
             <ul class="es-product-filter align-baseline">
               <li class="active">
                 <button class="btn">Yangilari bo‘yicha</button>
@@ -446,7 +448,7 @@
                 <img src="img/ic_filter.svg" alt="">
               </li>
             </ul>
-            <div class="row">
+            <div class="row gx-1">
               <div class="col-md-3">
                 <div class="es-product-item">
                   <div class="es-product-header">
@@ -795,6 +797,31 @@
                   </div>
                 </div>
               </div>
+            </div>
+            <div class="es-products-pages">
+              <button class="btn">
+                <img src="img/arrow-left-disabled.svg" alt="">
+              </button>
+              <ul class="es-page-numbers">
+                <li class="active">
+                  <button class="btn">1</button>
+                </li>
+                <li>
+                  <button class="btn">2</button>
+                </li>
+                <li>
+                  <button class="btn">3</button>
+                </li>
+                <li>
+                  <button class="btn">4</button>
+                </li>
+                <li>
+                  <button class="btn">5</button>
+                </li>
+              </ul>
+              <button class="btn">
+                <img src="img/ic_slick_right.svg" alt="">
+              </button>
             </div>
           </div>
         </div>
@@ -839,6 +866,7 @@
               </li>
               <li class="nav-item">
                 <a class="item-link" href="wholesale.html">Ulgurji xarid</a>
+                <span>-</span>
               </li>
               <li class="nav-item">
                 <a class="item-link" href="carriers-page.html">Postavshiklar uchun</a>
@@ -855,7 +883,8 @@
               </a>
             </div>
             <div class="footer-slogan">
-              Avval o‘zingizdan boshlang
+                                <span>-</span>
+                                Avval o‘zingizdan boshlang
             </div>
           </div>
           <div class="footer-right">
