Final review with Qamar stuff

--- a/action-view.html
+++ b/action-view.html
@@ -302,7 +302,7 @@
           <ol class="breadcrumb es-breadcrumb es-breadcrumb-ac-view-mb">
             <li class="breadcrumb-item"><a href="index.html">Bosh sahifa</a></li>
             <li class="breadcrumb-item"><a href="actions.html">Aksiyalar</a></li>
-            <li aria-current="page" class="breadcrumb-item active">Fiqhga nazar</li>
+            <li aria-current="page" class="breadcrumb-item">Fiqhga nazar</li>
           </ol>
         </nav>
         <div class="es-actions-list">
@@ -343,7 +343,7 @@
 
           <section class="es-products-section">
             <div class="container">
-              <h3 class="es-subtitle es-action-view-subtitle">Aksiyadagi kitoblar</h3>
+              <h3 class="es-action-view-subtitle">Aksiyadagi kitoblar</h3>
 
               <div class="row es-products-list product-slick list-slick">
                 <div class="col-md-2">
@@ -416,7 +416,7 @@
                       <div class="es-product-category">
                         <a href="product-view.html">Kitoblar</a>
                       </div>
-                      <div class="es-product-title">
+                      <div class="es-product-t aria-current="page" itle">
                         <a href="product-view.html">Oltin silsila to‘plami</a>
                       </div>
                       <div class="es-product-price">
