--- a/category.html
+++ b/category.html
@@ -420,8 +420,8 @@
                     <input name="check" type="checkbox" /> Ahmad Lutfiy qozonchi
                   </label>
                 </li>
-                <li>barchasini ko‘rish</li>
               </ul>
+              <button class="es-category-see-all-btn btn">BARCHASINI KO'RISH</button>
             </div>
             <div class="es-category-filter">
               <div class="es-cf-title">Betlar soni</div>
@@ -883,8 +883,8 @@
               </a>
             </div>
             <div class="footer-slogan">
-                                <span>-</span>
-                                Avval o‘zingizdan boshlang
+              <span>-</span>
+              Avval o‘zingizdan boshlang
             </div>
           </div>
           <div class="footer-right">
