--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
               <img src="img/ic_language.svg" /> РУС
               <img class="drpdwn-liner" src="./img/ic_arrow_down.svg" alt="">
             </a>
-            <div aria-labelledby="navbarDropdown" class="dropdown-menu dropdown-menu-right">
+            <div aria-labelledby="navbarDropdown" class="dropdown-menu dropdown-menu-right ">
               <a class="dropdown-item active" href="#">Русский</a>
               <a class="dropdown-item" href="#">O'zbekcha</a>
               <a class="dropdown-item" href="#">English</a>
@@ -288,7 +288,6 @@
           <li class="nav-item sm-hide mr-0">
             <a class="nav-link icon-link inactive" data-target="#cartModal" data-toggle="modal" href="#">
               <img alt="Cart" src="img/ic_cart.svg"><span>Savatcha</span>
-              <!-- <span class="badge badge-cart">2</span> -->
             </a>
           </li>
         </ul>
@@ -314,7 +313,7 @@
                 <div class="es-banner">
                   <h3 class="es-banner-header">Farzand tarbiyasi</h3>
                   <p class="es-banner-desc">kitoblariga 1-7 avgust kunlari chegirma</p>
-                  <a href="action-view.html" class="es-banner-button">BATAFSIL MA’LUMOT <img class="ml-1" src="img/arrow-right.svg" alt=""></a>
+                  <a href="action-view.html" class="btn-more">BATAFSIL MA’LUMOT <img class="ml-1" src="img/arrow-right.svg" alt=""></a>
                 </div>
               </div>
             </div>
@@ -324,7 +323,7 @@
                 <div class="es-banner">
                   <h3 class="es-banner-header">Hadis kitoblariga</h3>
                   <p class="es-banner-desc">ramazon oyida -35%lik chegirma</p>
-                  <a href="action-view.html" class="es-banner-button">BATAFSIL MA’LUMOT <img class="ml-1" src="img/arrow-right.svg" alt=""></a>
+                  <a href="action-view.html" class="btn-more">BATAFSIL MA’LUMOT <img class="ml-1" src="img/arrow-right.svg" alt=""></a>
                 </div>
               </div>
             </div>
@@ -334,7 +333,7 @@
                 <div class="es-banner">
                   <h3 class="es-banner-header">Al-Sheikh musk</h3>
                   <p class="es-banner-desc">mushkambari Attorda yana sotuvda!</p>
-                  <a href="action-view.html" class="es-banner-button">BATAFSIL MA’LUMOT <img class="ml-1" src="img/arrow-right.svg" alt=""></a>
+                  <a href="action-view.html" class="btn-more">BATAFSIL MA’LUMOT <img class="ml-1" src="img/arrow-right.svg" alt=""></a>
                 </div>
               </div>
             </div>
@@ -1539,7 +1538,6 @@
     </section>
 
     <div class="es-locations">
-      <img alt="" class="img-fluid w-100" src="img/maps.png" />
       <div class="container-fluid es-location-container">
         <div class="es-location-content">
           <div class="es-location-title">
