--- a/product-view.html
+++ b/product-view.html
@@ -361,9 +361,9 @@
                             </div>
 
                             <div class="es-pv-btns">
-                                <button class="btn btn-buy btn-lg mr-2">Добавить в корзину</button>
-                                <button class="btn btn-gray btn-lg mr-2" data-target="#quickBuyModal"
-                                    data-toggle="modal">Купить</button>
+                                <button class="btn btn-buy product-view-add-to-cart-btn mr-2">Savatchaga qo‘shish</button>
+                                <button class="btn btn-gray es-quick-buy-btn mr-2" data-target="#quickBuyModal"
+                                    data-toggle="modal">Tezkor xarid qilish</button>
                                 <button class="btn btn-gray"><img src="img/ic_fb.svg" /></button>
                             </div>
                         </div>
@@ -417,11 +417,11 @@
                             <div class="es-nav-tabs">
                                 <ul class="nav nav-tabs nav-justified" role="tablist">
                                     <li class="nav-item es-tab-item">
-                                        <a class="nav-link" data-toggle="tab" href="#duck2" role="tab"
+                                        <a class="nav-link active es-first-tab-item" data-toggle="tab" href="#duck2" role="tab"
                                             aria-controls="duck2" aria-selected="true">Batafsil</a>
                                     </li>
                                     <li class="nav-item es-tab-item">
-                                        <a class="nav-link active" data-toggle="tab" href="#chicken2" role="tab"
+                                        <a class="nav-link" data-toggle="tab" href="#chicken2" role="tab"
                                             aria-controls="chicken2" aria-selected="false">Tarkib</a>
                                     </li>
                                     <li class="nav-item es-tab-item">
@@ -431,7 +431,7 @@
                                 </ul>
 
                                 <div class="tab-content mt-3">
-                                    <div class="tab-pane" id="duck2" role="tabpanel" aria-labelledby="duck-tab">
+                                    <div class="tab-pane es-tab-content" id="duck2" role="tabpanel" aria-labelledby="duck-tab">
                                         Faqihlarning buyugi va valiylarning ustuni deb sharaflangan atoqli olim Abu
                                         Zakariyo Yahyo ibn Sharaf an-Navaviy qalamiga mansub qo‘lingizdagi kitob ushbu
                                         “Riyozus solihiyn” kitobi bitilganiga salkam 800 yil bo‘ldi. Shuncha yil o‘tgan
