--- a/saved-full.html
+++ b/saved-full.html
@@ -322,7 +322,7 @@
                 <h1 class="es-category-title">Saqlangan mahsulotlar<span class="es-category-count">3 ta</span></h1>
                 <div class="row">
                     <div class="col-md-3">
-                        <div class="es-category-filter">
+                        <div class="es-category-filter profile-info-nav">
                             <ul class="es-category-list es-saved-nav">
                                 <li class="nav-item">
                                     <a class="item-link" href="actions.html">Aksiyalar</a>
