--- a/wholesale.html
+++ b/wholesale.html
@@ -312,9 +312,8 @@
                     mumkin bo‘ladi.
                 </p>
 
-                <button class="btn es-whole-sale-btn btn-lg d-flex align-items-center"><img src="img/ic-upload.svg" alt="">&nbsp; YUKLAB OLISH</button>
-                <p class="es-alert-text"><img class="mr-2" src="img/ic_info.svg" alt="">O‘zbekiston bozoridagi
-                    ulushini belgilang</p>
+                <button class="btn es-whole-sale-btn d-flex align-items-center"><img src="img/ic-upload.svg" alt="">&nbsp; YUKLAB OLISH</button>
+                <p class="es-alert-text"><img class="mr-2" src="img/ic_info.svg" alt="">Narxlar 21-sentabr 2022 yil yangilangan</p>
             </div>
         </div>
     </main>
