--- a/profile-info.html
+++ b/profile-info.html
@@ -302,17 +302,17 @@
                 <nav aria-label="breadcrumb">
                     <ol class="breadcrumb es-breadcrumb">
                         <li class="breadcrumb-item"><a href="#">Bosh sahifa</a></li>
-                        <li aria-current="page" class="breadcrumb-item active">Buyurtmalarim</li>
+                        <li aria-current="page" class="breadcrumb-item">Profil ma’lumotlarim</li>
                     </ol>
                 </nav>
 
-                <h1 class="es-category-title">Buyurtmalarim</h1>
+                <h1 class="es-category-title">Profil ma’lumotlarim</h1>
                 <div class="row">
                     <div class="col-md-3">
-                        <div class="es-category-filter">
+                        <div class="es-category-filter profile-info-nav">
                             <ul class="es-category-list es-saved-nav">
                                 <li>
-                                    <a class="active" href="#">Buyurtmalarim</a>
+                                    <a class="active" href="#">Profil ma’lumotlarim</a>
                                 </li>
                                 <li>
                                     <a href="#">Saqlanganlar</a>
@@ -338,7 +338,7 @@
                             <h2 class="es-profile-header es-profile-header2">Manzil va tel.raqam</h2>
                             <input type="text" class="form-control es-checkout-input" placeholder="+998 (90) 900-49-38">
                             <input type="text" class="form-control es-checkout-input" placeholder="Jinsingiz">
-                            <button class="btn es-profile-page-btn btn-lg w-100">BUYURTMANI TASDIQLASH</button>
+                            <button class="btn es-profile-page-btn btn-lg w-100">O‘ZGARISHLARNI SAQLASH</button>
                         </div>
                     </div>
                 </div>
