--- a/saved-articles.html
+++ b/saved-articles.html
@@ -309,7 +309,7 @@
                 <h1 class="es-category-title">Buyurtmalarim</h1>
                 <div class="row">
                     <div class="col-md-3">
-                        <div class="es-category-filter">
+                        <div class="es-category-filter profile-info-nav">
                             <ul class="es-category-list es-saved-nav">
                                 <li>
                                     <a class="active" href="#">Buyurtmalarim</a>
