--- a/saved-empty.html
+++ b/saved-empty.html
@@ -317,7 +317,7 @@
 
                 <div class="es-icons-saved">
                     <div class="es-saved-icon">
-                        <img src="img/saved-page.svg" alt="">
+                        <img src="img/frame.svg" alt="">
                     </div>
                     <div>
                         <img class="saved-arrow" src="img/arrow-left-disabled.svg" alt="">
@@ -327,7 +327,7 @@
                     </div>
                 </div>
 
-                <button class="btn es-saved-btn btn-lg">MAHSULOTLARGA O‘TISH</button>
+                <button class="btn es-saved-btn">MAHSULOTLARGA O‘TISH</button>
             </div>
         </div>
     </main>
