--- a/user-orders.html
+++ b/user-orders.html
@@ -309,7 +309,7 @@
                 <h1 class="es-category-title">Buyurtmalarim</h1>
                 <div class="row">
                     <div class="col-md-3">
-                        <div class="es-category-filter">
+                        <div class="es-category-filter profile-info-nav">
                             <ul class="es-category-list es-saved-nav">
                                 <li class="nav-item">
                                     <a class="item-link" href="actions.html">Aksiyalar</a>
@@ -329,7 +329,7 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="col-md-9">
+                    <div class="col-md-9 user-orders-table-wrapper">
                         <table class="table">
                             <tbody>
                                 <tr>
