Language dropdown button fixed

--- a/index.html
+++ b/index.html
@@ -43,10 +43,24 @@
               <img src="img/ic_language.svg" /> РУС
               <img class="drpdwn-liner" src="./img/ic_arrow_down.svg" alt="">
             </a>
-            <div aria-labelledby="navbarDropdown" class="dropdown-menu dropdown-menu-right ">
-              <a class="dropdown-item active" href="#">Русский</a>
-              <a class="dropdown-item" href="#">O'zbekcha</a>
-              <a class="dropdown-item" href="#">English</a>
+            <div aria-labelledby="navbarDropdown" class="dropdown-menu dropdown-menu-right es-language-dropdown-menu">
+              <a class="dropdown-item first-item active" href="#">
+                <div class="dropdown-item-inner">
+                  Русский <img src="img/tick.svg" alt="">
+                </div>
+              </a>
+              <div class="border-line"></div>
+              <a class="dropdown-item middle-item" href="#">
+                <div class="dropdown-item-inner">
+                  O'zbekcha <img src="img/tick.svg" alt="">
+                </div>
+              </a>
+              <div class="border-line"></div>
+              <a class="dropdown-item last-item" href="#">
+                <div class="dropdown-item-inner">
+                  English <img src="img/tick.svg" alt="">
+                </div>
+              </a>
             </div>
           </li>
         </ul>
