Checkbox edited but left 2 bugs

--- a/category.html
+++ b/category.html
@@ -401,23 +401,27 @@
               <div class="es-cf-title">Muallif</div>
               <ul class="es-category-list">
                 <li>
-                  <label>
+                  <label class="checkbox-label">
                     <input name="check" type="checkbox" /> Hasan ul-Basriy
+                    <span class="geekmark"></span>
                   </label>
                 </li>
                 <li>
-                  <label>
+                  <label class="checkbox-label">
                     <input name="check" type="checkbox" /> Muhammad Sayyid Tantoviy
+                    <span class="geekmark"></span>
                   </label>
                 </li>
                 <li>
-                  <label>
+                  <label class="checkbox-label">
                     <input name="check" type="checkbox" /> Muhammad Taqiy Usmoniy
+                    <span class="geekmark"></span>
                   </label>
                 </li>
                 <li>
-                  <label>
+                  <label class="checkbox-label">
                     <input name="check" type="checkbox" /> Ahmad Lutfiy qozonchi
+                    <span class="geekmark"></span>
                   </label>
                 </li>
               </ul>
