--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <div class="dropdown-item-inner">
                   Русский <img src="img/tick.svg" alt="">
                 </div>
-              </a>
+              </a>50
               <div class="border-line"></div>
               <a class="dropdown-item middle-item" href="#">
                 <div class="dropdown-item-inner">
@@ -314,7 +314,7 @@
       <div class="main-carousel">
         <a href="confirmed-order.html" class="es-order-status">Jarayondagi buyurtmangiz</a>
         <a href="confirmed-order.html" class="es-order-status es-order-status-truck d-none"><img src="img/truck-time.svg" alt=""></a>
-        <div class="carousel " data-ride="carousel" id="carouselExampleIndicators">
+        <div class="carousel" data-ride="carousel" id="carouselExampleIndicators">
           <ol class="carousel-indicators">
             <li class="" data-slide-to="0" data-target="#carouselExampleIndicators"></li>
             <li class="" data-slide-to="1" data-target="#carouselExampleIndicators"></li>
@@ -322,7 +322,7 @@
           </ol>
           <div class="carousel-inner">
             <div class="carousel-item position-relative">
-              <img class="img-fluid w-100" src="img/hadis-banner.png" />
+              <img class="main-carusel-img img-fluid w-100" src="img/hadis-banner.png" />
               <div class="es-main-carusel-banner position-absolute">
                 <div class="es-banner">
                   <h3 class="es-banner-header">Farzand tarbiyasi</h3>
@@ -330,9 +330,10 @@
                   <a href="action-view.html" class="btn-more">BATAFSIL MA’LUMOT <img class="ml-1" src="img/arrow-right.svg" alt=""></a>
                 </div>
               </div>
+              <a href="action-view.html" class="btn-more mob-banner-btn-more">BATAFSIL MA’LUMOT <img class="ml-1" src="img/arrow-right.svg" alt=""></a>
             </div>
             <div class="carousel-item">
-              <img class="img-fluid w-100" src="img/hadis-banner.png" />
+              <img class="main-carusel-img img-fluid w-100" src="img/hadis-banner.png" />
               <div class="es-main-carusel-banner position-absolute">
                 <div class="es-banner">
                   <h3 class="es-banner-header">Hadis kitoblariga</h3>
@@ -340,16 +341,17 @@
                   <a href="action-view.html" class="btn-more">BATAFSIL MA’LUMOT <img class="ml-1" src="img/arrow-right.svg" alt=""></a>
                 </div>
               </div>
+              <a href="action-view.html" class="btn-more mob-banner-btn-more">BATAFSIL MA’LUMOT <img class="ml-1" src="img/arrow-right.svg" alt=""></a>
             </div>
             <div class="carousel-item active">
-              <img class="img-fluid w-100" src="img/hadis-banner.png" />
+              <img class="main-carusel-img img-fluid w-100" src="img/hadis-banner.png" />
               <div class="es-main-carusel-banner position-absolute">
                 <div class="es-banner">
                   <h3 class="es-banner-header">Al-Sheikh musk</h3>
                   <p class="es-banner-desc">mushkambari Attorda yana sotuvda!</p>
-                  <a href="action-view.html" class="btn-more">BATAFSIL MA’LUMOT <img class="ml-1" src="img/arrow-right.svg" alt=""></a>
                 </div>
               </div>
+              <a href="action-view.html" class="btn-more mob-banner-btn-more">BATAFSIL MA’LUMOT <img class="ml-1" src="img/arrow-right.svg" alt=""></a>
             </div>
           </div>
           <button class="carousel-control-prev d-none" data-slide="prev" data-target="#carouselExampleIndicators"
@@ -368,7 +370,43 @@
 
     <section class="es-main-categories">
       <div class="container">
-        <div class="es-main-category-list">
+        <div class="es-main-category-list row">
+          <div class="es-mc-item">
+            <div class="es-mc-img">
+              <a href="#">
+                <img src="img/mc.jpg" />
+              </a>
+            </div>
+            <div class="es-mc-title">
+              <a href="#">
+                Qur’oni Karim
+              </a>
+            </div>
+          </div>
+          <div class="es-mc-item">
+            <div class="es-mc-img">
+              <a href="#">
+                <img src="img/mc.jpg" />
+              </a>
+            </div>
+            <div class="es-mc-title">
+              <a href="#">
+                Qur’oni Karim
+              </a>
+            </div>
+          </div>
+          <div class="es-mc-item">
+            <div class="es-mc-img">
+              <a href="#">
+                <img src="img/mc.jpg" />
+              </a>
+            </div>
+            <div class="es-mc-title">
+              <a href="#">
+                Qur’oni Karim
+              </a>
+            </div>
+          </div>
           <div class="es-mc-item">
             <div class="es-mc-img">
               <a href="#">
@@ -437,7 +475,7 @@
       <div class="container">
         <h3 class="section-title es-header-to-right">Новые поступление</h3>
 
-        <div class="row es-products-list">
+        <div class="row es-products-list product-slick list-slick">
           <div class="col-md-2">
             <div class="es-product-item">
               <div class="es-product-header">
@@ -493,6 +531,122 @@
                   <button class="btn btn-plus">+</button>
                 </div>
                 <button class="btn btn-buy d-none">XARID QILISH</button>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-2">
+            <div class="es-product-item">
+              <div class="es-product-header">
+                <a href="product-view.html">
+                  <img class="img-fluid w-100" src="img/product.jpg" />
+                </a>
+                <button class="btn btn-favorite"></button>
+              </div>
+              <div class="es-product-detail">
+                <div class="es-product-category">
+                  <a href="product-view.html">Kitoblar</a>
+                </div>
+                <div class="es-product-title">
+                  <a href="product-view.html">Oltin silsila to‘plami</a>
+                </div>
+                <div class="es-product-price">
+                  89,000 so‘m
+                </div>
+              </div>
+              <div class="es-product-options">
+                <div class="es-product-controls d-none">
+                  <button class="btn btn-minus">-</button>
+                  <span class="es-product-quantity">1</span>
+                  <button class="btn btn-plus">+</button>
+                </div>
+                <button class="btn btn-buy">XARID QILISH</button>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-2">
+            <div class="es-product-item">
+              <div class="es-product-header">
+                <a href="product-view.html">
+                  <img class="img-fluid w-100" src="img/product.jpg" />
+                </a>
+                <button class="btn btn-favorite"></button>
+              </div>
+              <div class="es-product-detail">
+                <div class="es-product-category">
+                  <a href="product-view.html">Kitoblar</a>
+                </div>
+                <div class="es-product-title">
+                  <a href="product-view.html">Oltin silsila to‘plami</a>
+                </div>
+                <div class="es-product-price">
+                  89,000 so‘m
+                </div>
+              </div>
+              <div class="es-product-options">
+                <div class="es-product-controls d-none">
+                  <button class="btn btn-minus">-</button>
+                  <span class="es-product-quantity">1</span>
+                  <button class="btn btn-plus">+</button>
+                </div>
+                <button class="btn btn-buy">XARID QILISH</button>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-2">
+            <div class="es-product-item">
+              <div class="es-product-header">
+                <a href="product-view.html">
+                  <img class="img-fluid w-100" src="img/product.jpg" />
+                </a>
+                <button class="btn btn-favorite"></button>
+              </div>
+              <div class="es-product-detail">
+                <div class="es-product-category">
+                  <a href="product-view.html">Kitoblar</a>
+                </div>
+                <div class="es-product-title">
+                  <a href="product-view.html">Oltin silsila to‘plami</a>
+                </div>
+                <div class="es-product-price">
+                  89,000 so‘m
+                </div>
+              </div>
+              <div class="es-product-options">
+                <div class="es-product-controls d-none">
+                  <button class="btn btn-minus">-</button>
+                  <span class="es-product-quantity">1</span>
+                  <button class="btn btn-plus">+</button>
+                </div>
+                <button class="btn btn-buy">XARID QILISH</button>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-2">
+            <div class="es-product-item">
+              <div class="es-product-header">
+                <a href="product-view.html">
+                  <img class="img-fluid w-100" src="img/product.jpg" />
+                </a>
+                <button class="btn btn-favorite"></button>
+              </div>
+              <div class="es-product-detail">
+                <div class="es-product-category">
+                  <a href="product-view.html">Kitoblar</a>
+                </div>
+                <div class="es-product-title">
+                  <a href="product-view.html">Oltin silsila to‘plami</a>
+                </div>
+                <div class="es-product-price">
+                  89,000 so‘m
+                </div>
+              </div>
+              <div class="es-product-options">
+                <div class="es-product-controls d-none">
+                  <button class="btn btn-minus">-</button>
+                  <span class="es-product-quantity">1</span>
+                  <button class="btn btn-plus">+</button>
+                </div>
+                <button class="btn btn-buy">XARID QILISH</button>
               </div>
             </div>
           </div>
@@ -620,7 +774,7 @@
       <div class="container">
         <h3 class="section-title es-header-to-right">Самые продоваемые</h3>
 
-        <div class="row es-products-list">
+        <div class="row es-products-list product-slick list-slick">
           <div class="col-md-2">
             <div class="es-product-item">
               <div class="es-product-header">
@@ -676,6 +830,122 @@
                   <button class="btn btn-plus">+</button>
                 </div>
                 <button class="btn btn-buy d-none">XARID QILISH</button>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-2">
+            <div class="es-product-item">
+              <div class="es-product-header">
+                <a href="product-view.html">
+                  <img class="img-fluid w-100" src="img/product.jpg" />
+                </a>
+                <button class="btn btn-favorite"></button>
+              </div>
+              <div class="es-product-detail">
+                <div class="es-product-category">
+                  <a href="product-view.html">Kitoblar</a>
+                </div>
+                <div class="es-product-title">
+                  <a href="product-view.html">Oltin silsila to‘plami</a>
+                </div>
+                <div class="es-product-price">
+                  89,000 so‘m
+                </div>
+              </div>
+              <div class="es-product-options">
+                <div class="es-product-controls d-none">
+                  <button class="btn btn-minus">-</button>
+                  <span class="es-product-quantity">1</span>
+                  <button class="btn btn-plus">+</button>
+                </div>
+                <button class="btn btn-buy">XARID QILISH</button>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-2">
+            <div class="es-product-item">
+              <div class="es-product-header">
+                <a href="product-view.html">
+                  <img class="img-fluid w-100" src="img/product.jpg" />
+                </a>
+                <button class="btn btn-favorite"></button>
+              </div>
+              <div class="es-product-detail">
+                <div class="es-product-category">
+                  <a href="product-view.html">Kitoblar</a>
+                </div>
+                <div class="es-product-title">
+                  <a href="product-view.html">Oltin silsila to‘plami</a>
+                </div>
+                <div class="es-product-price">
+                  89,000 so‘m
+                </div>
+              </div>
+              <div class="es-product-options">
+                <div class="es-product-controls d-none">
+                  <button class="btn btn-minus">-</button>
+                  <span class="es-product-quantity">1</span>
+                  <button class="btn btn-plus">+</button>
+                </div>
+                <button class="btn btn-buy">XARID QILISH</button>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-2">
+            <div class="es-product-item">
+              <div class="es-product-header">
+                <a href="product-view.html">
+                  <img class="img-fluid w-100" src="img/product.jpg" />
+                </a>
+                <button class="btn btn-favorite"></button>
+              </div>
+              <div class="es-product-detail">
+                <div class="es-product-category">
+                  <a href="product-view.html">Kitoblar</a>
+                </div>
+                <div class="es-product-title">
+                  <a href="product-view.html">Oltin silsila to‘plami</a>
+                </div>
+                <div class="es-product-price">
+                  89,000 so‘m
+                </div>
+              </div>
+              <div class="es-product-options">
+                <div class="es-product-controls d-none">
+                  <button class="btn btn-minus">-</button>
+                  <span class="es-product-quantity">1</span>
+                  <button class="btn btn-plus">+</button>
+                </div>
+                <button class="btn btn-buy">XARID QILISH</button>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-2">
+            <div class="es-product-item">
+              <div class="es-product-header">
+                <a href="product-view.html">
+                  <img class="img-fluid w-100" src="img/product.jpg" />
+                </a>
+                <button class="btn btn-favorite"></button>
+              </div>
+              <div class="es-product-detail">
+                <div class="es-product-category">
+                  <a href="product-view.html">Kitoblar</a>
+                </div>
+                <div class="es-product-title">
+                  <a href="product-view.html">Oltin silsila to‘plami</a>
+                </div>
+                <div class="es-product-price">
+                  89,000 so‘m
+                </div>
+              </div>
+              <div class="es-product-options">
+                <div class="es-product-controls d-none">
+                  <button class="btn btn-minus">-</button>
+                  <span class="es-product-quantity">1</span>
+                  <button class="btn btn-plus">+</button>
+                </div>
+                <button class="btn btn-buy">XARID QILISH</button>
               </div>
             </div>
           </div>
@@ -872,7 +1142,7 @@
       <div class="container">
         <h3 class="section-title es-header-to-right">Скидки</h3>
 
-        <div class="row es-products-list">
+        <div class="row es-products-list product-slick list-slick">
           <div class="col-md-2">
             <div class="es-product-item">
               <div class="es-product-header">
@@ -1652,26 +1922,37 @@
     <ul class="nav">
       <li class="nav-item">
         <a class="nav-link active" href="/">
-          <img src="img/ic_main_mini.svg" />
+          <img src="img/mob-nav-home.svg" />
+          <img class="d-none" src="img/mob-empty-home.svg" />
           <span class="menu-title">Главная</span>
         </a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/menu">
-          <img src="img/ic_menu_mini.svg" />
+          <img src="img/search-status.svg" />
+          <img class="d-none" src="img/search-status-full.svg" />
           <span class="menu-title">Каталог</span>
         </a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">
-          <img src="img/ic_cart_mini.svg" />
+          <img src="img/bag-2.svg" />
+          <img class="d-none" src="img/bag-full-2.svg" />
           <span class="badge badge-cart">2</span>
           <span class="menu-title">Корзина</span>
         </a>
       </li>
       <li class="nav-item">
         <a class="nav-link" data-target="#authModal" data-toggle="modal" href="#">
-          <img src="img/ic_profile_mini.svg" />
+          <img src="img/mob-nav-save.svg" />
+          <img class="d-none" src="img/mob-full-save.svg" />
+          <span class="menu-title">Профиль</span>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" data-target="#authModal" data-toggle="modal" href="#">
+          <img src="img/profile.svg" />
+          <img class="d-none" src="img/mob-full-profile.svg" />
           <span class="menu-title">Профиль</span>
         </a>
       </li>
